crates/analyzer/tests/snapshots/errors__call_duplicate_def.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: `fn __call__()` is defined multiple times in `contract Foo`
   ┌─ compile_errors/call_duplicate_def.fe:2:5
   │    
 2 │         pub fn __call__() {}
   │         ^^^^^^^^^^^^^^^^^^^^ `__call__` first defined here
   ·    
 6 │ ╭       pub fn __call__() {
 7 │ │           1 + 2
 8 │ │       }
   │ ╰───────' `__call__` redefined here
 9 │     
10 │   ╭     pub fn __call__() {
11 │   │         3 + 4
12 │   │     }
   │   ╰─────' `__call__` redefined here


